--- a/launchmon/man/LMON_fe_launchAndSpawnDaemons.3
+++ b/launchmon/man/LMON_fe_launchAndSpawnDaemons.3
@@ -155,7 +155,7 @@ tool client before it exits (\fBA.1.3.\fR). RM_job refers to the resource
 manager launcher process that monitors the target job. RM_daemon
 refers to the resource manager launcher process that monitors
 the deamons.   
-[BlueGene Note] As BlueGene's control system implements
+[IBM BlueGene Note] As BlueGene's control system implements
 daemon co-spawning service as part of its Automatic Process Acquisition
 Interface (APAI), RM_job is equal to RM_daemon.
 
@@ -187,7 +187,7 @@ the engine would perform \fBA.1\fR instead; obviously in this case,
 the failing launchmon engine will keep the RM_daemon process
 running, and won't be able to do \fBA.1.3.\fR
 .PP
-\fB[BlueGene Note]\fR As RM_daemon is equal to RM_job on BlueGene, 
+\fB[IBM BlueGene Note]\fR As RM_daemon is equal to RM_job on BlueGene, 
 and the system control system doesn't offer a mechanism to 
 clean up daemons, LaunchMON does not currently enforce
 killing of daemons for this condition.   
@@ -201,13 +201,13 @@ However, for some reason, if the engine also gets into trouble,
 it will perform A.1; obviously in this case, it
 doesn't need to perform \fBA.1.2.\fR
 .PP
-\fB[BlueGene Note]\fR As RM_daemon is equal to RM_job on BlueGene, 
-and the system control system doesn't offer a mechanism to 
-detect a daemon failure, LaunchMON does not currently enforce
-this semantics on this platform.   
+\fB[IBM BlueGene Note]\fR As RM_daemon is equal to RM_job on BlueGene, 
+and the system control system does not offer a mechanism to 
+detect failures that occurred in the back-end daemons, LaunchMON does not 
+currently enforce this semantics on this platform.   
 .PP
-\fB[Cray ALPS Note]\fR The ALPS tool helper service doesn't offer a mechanism 
-to detect a daemon failure, LaunchMON  does not currently enforce this 
+\fB[Cray ALPS Note]\fR The ALPS tool helper service currently does not offer 
+a mechanism to detect failures in the daemons; LaunchMON does not enforce this 
 semantics on this platform.
 .PP
 \fBD.\fR When the job fails, the basic cleanup semantics of LaunchMON is
