Add prelimiary ORTE port

--- a/launchmon/man/LMON_fe_launchAndSpawnDaemons.3
+++ b/launchmon/man/LMON_fe_launchAndSpawnDaemons.3
@@ -218,6 +218,11 @@ and the system control system does not offer a mechanism to
 detect failures that occurred in the back-end daemons, LaunchMON does not 
 currently enforce this semantics on this platform.   
 .PP
+\fB[OpenRTE Note]\fR Identical to IBM BlueGene, RM_daemon is equal to RM_job 
+on OpenRTE and the system control system does not offer a mechanism to 
+detect failures that occurred in the back-end daemons. Hence, LaunchMON does not 
+currently enforce this semantics on this platform.   
+.PP
 \fB[Cray ALPS Note]\fR The ALPS tool helper service currently does not offer 
 a mechanism to detect failures in the daemons; LaunchMON does not enforce this 
 semantics on this platform.
