--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-28 Dong H. Ahn <ahn1@llnl.gov>
+	* files...:
+	Added LMON_fe_getRMInfo support
+
+
 2010-06-25 Dong H. Ahn <ahn1@llnl.gov>
 	* ChangeLog
 	README.ERROR_HANDLING
