--- a/NEWS
+++ b/NEWS
@@ -1,1 +1,27 @@
+2009-06-30 DHA Release a 0.7 beta version (0.7.2beta) 
+	        o Added new Cray XT4/5/6, OpenRTE and BlueGene/P 
+		  RM platform support in addition to existing 
+	     	  BlueGene/L and SLURM
+	        o Integrated the scalable version of PMGR, a.k.a. 
+		  COBO, and set it as the default bootfabric
+		o Ran scaling tests and validated the scalability 
+		  at over 100K MPI processes on BlueGene/P and 
+		  over 200K MPI processes on Cray XT5
+		o Augmented LMON FE API set while maintaining 
+	          backward compatibility of the existing API: 
+		   - LMON_fe_regErrorCB call
+		   - LMON_fe_getRMInfo call
+		   - LMON_DONT_STOP_APP environment variable	
+		o Added better performance and scalabilty testing 
+		  support with the --enable-tracing-cost config option
+		o Worked out the error handling semantics and enforced 
+		  it on the supported RMs; the semantics is documented
+	  	  in README.ERROR_HANDLING as well as the man page
+		  of LMON_fe_[launch|attach]SpawnDaemons
+		o Added a two-phased priority polling scheme into 
+		  the LaunchMON engine
+		o Better GNU AUTO build scripts and configure 
+		  parameters support
+		o Lots of bug fixes
+	
 2009-03-12 DHA Created 0.7 development branch
