--- a/README
+++ b/README
@@ -1,3 +1,17 @@
+2010-06-30 Dong H. Ahn <ahn1@llnl.gov>
+	o NEWS items
+        o Added new Cray XT4/5/6 and OpenRTE support
+        o Integrated the scalable version of PMGR, a.k.a.
+          "COBO", and set it as the default bootfabric
+        o Ran scaling tests and validated the scalability
+          at over 100K MPI processes on BlueGene/P and
+          over 200K MPI processes on Cray XT5.
+        o Augmented LMON API set while maintaining
+          the existing API to be backward-compatible
+          - LMON_fe_regErrorCB call
+          - LMON_fe_getRMInfo call
+          - LMON_DONT_STOP_APP environment variable
+	o Lots of bug fixes
 
 2009-05-20 Dong H. Ahn <ahn1@llnl.gov>
 	o Added LMON_fe_regErrorCB support
