--- a/launchmon/man/LMON_be_getMyRank.3
+++ b/launchmon/man/LMON_be_getMyRank.3
@@ -70,6 +70,7 @@ Dong H. Ahn <ahn1@llnl.gov>
 .BR LMON_fe_getResourceHandle(3),
 .BR LMON_fe_regErrorCB(3),
 .BR LMON_fe_regStatusCB(3),
+.BR LMON_fe_getRMInfo(3),
 .BR LMON_be_init(3),
 .BR LMON_be_finalize(3),
 .BR LMON_be_handshake(3),
