--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+2010-10-15 DHA Release the official 0.7 version (0.7.2)
+
 2009-06-30 DHA Release a 0.7 beta version (0.7.2beta) 
 	        o Added new Cray XT4/5/6, OpenRTE and BlueGene/P 
 		  RM platform support in addition to existing 
