added dynamic RM detection support in prep for BGQ port

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+2011-11-xx DHA Release pre-1.0 with BGQ support (1.0-pre)
+
 2010-10-15 DHA Release the official 0.7 version (0.7.2)
 
 2009-06-30 DHA Release a 0.7 beta version (0.7.2beta) 
