--- a/TODO
+++ b/TODO
@@ -134,6 +134,11 @@ x some configuration option doesn't build
   one another. deprecated some options, made some options
   mandatory and more importantly changed option specification
   style
+x add launch string support such that it can be overwritten by users
+  if they want. (as simple as an environment variable support?)
+  NOTE: 10/08/2011 scheduled for 1.0 release.
+x linux_launchmon_t::acquire_proctable performance problem at extreme
+  scale?
 - Investigate how to time when to release the mpirun process properly 
   so that BGL's APAI extension, which supports co-spawning,
   does not produce a race condition. 
@@ -142,12 +147,7 @@ x some configuration option doesn't build
   a single process. But it is okay so far because there is only one
   srun process it needs to monitor.  
   NOTE: 9/24/2008 not scheduled for 0.6 release.
-- add launch string support such that it can be overwritten by users
-  if they want. (as simple as an environment variable support?)
-  NOTE: 9/24/2008 not scheduled for 0.6 release.
 - make the selection of low-level communication layer dynamically
   NOTE: 9/24/2008 not scheduled for 0.6 release.
 - Re-attaching to the BGL mpirun seems to fail 
   (I just confirmed that TotalView also fails...)
-- linux_launchmon_t::acquire_proctable performance problem at extreme
-  scale?
