Creating the 1.0 release branch. This starts as a merge of 0.8-middleware-support and 1.0-BGQ

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,8 @@
-2011-11-xx DHA Release pre-1.0 with BGQ support (1.0-pre)
+2012-xx-xx DHA Release pre-1.0 with BGQ support (1.0-pre)
+
+2012-06-03 DHA Merge the LaunchMON MW API into 1.0 alpha
+
+2012-03-25 DHA Add BGQ port into 1.0 alpha
 
 2010-10-15 DHA Release the official 0.7 version (0.7.2)
 
